--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "json-server --watch db_videos.json --no-cors true --port 9000"
+        "start": "node index.js",
+        "dev": "json-server --watch db_todos.json --no-cors true --port 9000"
     },
     "dependencies": {
+        "dotenv": "^16.4.7",
         "json-server": "^0.17.0"
     },
     "keywords": [],
